--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -2,4 +2,4 @@
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
