--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,3 +5,4 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+SyntheticLikelihood = "dd14a069-f616-42ae-bdb8-5921107d30e5"
